feat: wire all API routes to database + seed script (Phase 0.3-0.5)
- Core: schema exports, db with schema, seed script (64 exercises, 37 cardio, demo user, 15 achievements)
- Auth: replaced in-memory store with PostgreSQL queries, refresh token rotation
- Exercises: paginated listing with search/filters, single exercise by ID
- Cardio: paginated listing with search/filters, random activity, single by ID
- Routines: user-scoped CRUD, nested weeks/days/exercises fetch
- Removed root tsconfig paths (let pnpm workspace resolution handle it)
- All 7 packages build clean

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,15 +17,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "exactOptionalPropertyTypes": false,
-    "paths": {
-      "@vibefit/shared": ["./packages/shared/src"],
-      "@vibefit/shared/*": ["./packages/shared/src/*"],
-      "@vibefit/ui": ["./packages/ui/src"],
-      "@vibefit/ui/*": ["./packages/ui/src/*"],
-      "@vibefit/core": ["./packages/core/src"],
-      "@vibefit/core/*": ["./packages/core/src/*"]
-    }
+    "exactOptionalPropertyTypes": false
   },
   "exclude": ["node_modules", "dist", "*.test.ts", "*.test.tsx"]
 }
