--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,12 +27,14 @@
     "db:seed": "tsx src/db/seed.ts"
   },
   "dependencies": {
+    "@vibefit/shared": "workspace:*",
+    "bcryptjs": "^2.4.3",
     "drizzle-orm": "^0.36.0",
-    "postgres": "^3.4.0",
     "pgvector": "^0.2.0",
-    "@vibefit/shared": "workspace:*"
+    "postgres": "^3.4.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "drizzle-kit": "^0.28.0",
     "tsx": "^4.19.0",
     "typescript": "^5.6.0",
